# jk

./: .gitignore  CMakeLists.txt  README.md
.github/: FUNDING.yml
include/jk/: action_handler.hpp  actions.hpp  config.hpp  generator.hpp  parser.hpp  print.hpp  value.hpp
src/: parser.cpp
tests/: execute.cpp  jk.cpp  parse.cpp
